Site title fixed + problem is overlapping fixed

--- a/src/output.css
+++ b/src/output.css
@@ -666,6 +666,10 @@ video {
   z-index: 30;
 }
 
+.z-40 {
+  z-index: 40;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
